wip: implementing table definitive state
